# custom-qtquickcontrol-example

./: .gitignore  CMakeLists.txt  main.cpp  main.py  main.qml
resources/: __init__.py  qtquickcontrols2.conf  resources.qrc
resources/styles/MyStyle/: Button.qml  ComboBox.qml  Label.qml  RoundButton.qml  TabBar.qml  TabButton.qml  qmldir
